# PTT-Sorgulama-API

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ptt_tracking_api/: __init__.py  api.py  client.py  config.py  main.py  models.py  schemas.py
tests/: test_api.py  test_client.py
