[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ptt-tracking-api"
version = "0.1.0"
description = "FastAPI service for querying PTT shipment tracking data by barcode."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anıl Çelik" }
]
keywords = ["ptt", "tracking", "shipment", "fastapi", "barcode"]
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ptt_tracking_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
